TM-12248 Fix displaying wrong icon on Edit command of Models and Manufacturers

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
@@ -29,13 +29,10 @@
                 </div>
             </div>
             <div class="modal-footer form-group-center">
-	            <button type="button" class="btn btn-primary pull-left" (click)="onEditManufacturer()" ><span
-			            class="fa fa-fw fa-floppy-o"></span> Edit
-	            </button>
+	            <button type="button" class="btn btn-primary pull-left" (click)="onEditManufacturer()" >
+		            <span class="glyphicon glyphicon-pencil"></span> Edit </button>
                 <button type="button" class="btn btn-default pull-right" (click)="cancelCloseDialog()">
-                    <span class="glyphicon glyphicon-ban-circle"></span>
-                    <span>Cancel</span>
-                </button>
+                    <span class="glyphicon glyphicon-ban-circle"></span> Cancel </button>
             </div>
         </div>
     </div>
