--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/model-device/components/model-device-show/model-device-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/model-device/components/model-device-show/model-device-show.component.html
@@ -53,13 +53,10 @@
 				</div>
 				<div class="modal-footer form-group-center">
 					<input name="id" type="hidden" id="show_modelId" value="{{deviceModel.id}}">
-					<button type="submit" class="btn btn-primary pull-left" (click)="onEditModel()"><span
-							class="fa fa-fw fa-floppy-o"></span> Edit
-					</button>
+					<button type="submit" class="btn btn-primary pull-left" (click)="onEditModel()">
+						<span class="glyphicon glyphicon-pencil"></span> Edit</button>
 					<button type="button" class="btn btn-default pull-right" (click)="cancelCloseDialog()">
-						<span class="glyphicon glyphicon-ban-circle"></span>
-						<span>Cancel</span>
-					</button>
+						<span class="glyphicon glyphicon-ban-circle"></span> Cancel</button>
 				</div>
 			</div>
 		</div>
