--- a/web-app/tds/web-app/css/page/module/assetExplorer/model-device-show.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/model-device-show.component.sass
@@ -2,8 +2,10 @@
   .modal-content
     width: 350px
   .modal-body
-    padding: 5px 15px
-    .form-group
+    padding: 15px 20px
+    .box-body
+      padding: unset
+    .row
       margin-bottom: 5px
   .modal-footer
-    padding: 5px 15px 15px
+    padding: 5px 20px 15px
