--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
@@ -37,7 +37,7 @@
 					<span class="glyphicon glyphicon-pencil"></span> Edit
 				</button>
 				<button type="button" class="btn btn-default pull-right" (click)="cancelCloseDialog()">
-					<span class="glyphicon glyphicon-ban-circle"></span> Cancel
+					<span class="glyphicon glyphicon-ban-circle"></span> Close
 				</button>
 			</div>
 		</div>
