--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/model-device/components/model-device-show/model-device-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/model-device/components/model-device-show/model-device-show.component.html
@@ -72,7 +72,7 @@
 					<button type="submit" class="btn btn-primary pull-left" (click)="onEditModel()">
 						<span class="glyphicon glyphicon-pencil"></span> Edit</button>
 					<button type="button" class="btn btn-default pull-right" (click)="cancelCloseDialog()">
-						<span class="glyphicon glyphicon-ban-circle"></span> Cancel</button>
+						<span class="glyphicon glyphicon-ban-circle"></span> Close</button>
 				</div>
 			</div>
 		</div>
