--- a/web-app/tds/web-app/css/shared/components/aka.component.sass
+++ b/web-app/tds/web-app/css/shared/components/aka.component.sass
@@ -3,11 +3,13 @@
     max-height: 200px
     overflow: auto
     .aka-item
-      margin-top: 5px
+      margin-bottom: 8px
+      display: flex
+      justify-content: space-between
+      align-items: center
   input
-    width: 80%
+    width: 90%
   button
-    margin-top: 10px
     font-weight: bold
   .aka-items .delete-aka
     cursor: pointer
