--- a/web-app/tds/web-app/css/page/module/assetExplorer/model-device-show.component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/model-device-show.component.sass
@@ -1,11 +1,14 @@
 .model-device-show-component
-  .modal-content
-    width: 350px
-  .modal-body
-    padding: 15px 20px
-    .box-body
-      padding: unset
-    .row
-      margin-bottom: 5px
-  .modal-footer
-    padding: 15px 20px
+  $initial-width: 300px
+  .modal-dialog
+    width: $initial-width
+    .modal-content
+      width: $initial-width
+    .modal-body
+      padding: 15px 20px
+      .box-body
+        padding: unset
+      .row
+        margin-bottom: 5px
+    .modal-footer
+      padding: 15px 20px
