TM-12248 Add handlers to close on esc key pressed

--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-edit/manufacturer-edit.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-edit/manufacturer-edit.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade in manufacturer-edit-component" id="device-manufacturer-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
+<div class="modal fade in manufacturer-edit-component" tds-handle-escape (escPressed)="cancelCloseDialog()" id="device-manufacturer-edit-component" data-backdrop="static" tabindex="-1" role="dialog">
     <div class="modal-dialog modal-md" role="document">
         <div class="modal-content">
             <div class="modal-header">
