--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/manufacturer/components/manufacturer-show/manufacturer-show.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade in manufacturer-show-component" id="device-manufacturer-component" data-backdrop="static"
+<div class="modal fade in manufacturer-show-component" tds-handle-escape (escPressed)="cancelCloseDialog()" id="device-manufacturer-component" data-backdrop="static"
      tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-sm" role="document">
 		<div class="modal-content">
