--- a/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/model-device/components/model-device-show/model-device-show.component.html
+++ b/web-app/tds/web-app/app-js/modules/assetExplorer/components/device/model-device/components/model-device-show/model-device-show.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade in model-device-show-component" id="model-device-show-component" data-backdrop="static"
+<div class="modal fade in model-device-show-component" tds-handle-escape (escPressed)="cancelCloseDialog()" id="model-device-show-component" data-backdrop="static"
      tabindex="-1" role="dialog">
 	<form id="editModelForm" action="/tdstm/model/edit" method="post" target="_blank">
 		<div class="modal-dialog modal-sm" role="document">
