--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -268,7 +268,7 @@
                     <span class="glyphicon glyphicon-ban-circle"></span>
                     <span>Cancel</span>
                 </button>
-                <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete pull-left">
+                <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete">
                     <span  class="glyphicon glyphicon-trash"></span>
                     <span>Delete</span>
                 </button>
