TM-12251 Rename label Predecessor to Predecessors

--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -158,7 +158,7 @@
                                                     [rowClass]="rowStatusColor">
                                                     <!-- Toolbar Template -->
                                                     <ng-template kendoGridToolbarTemplate [position]="'top'">
-                                                        <label class="pad-top-2 pad-left-10 mar-bottom-0">Predecessor ({{dataGridTaskPredecessorsHelper.gridData.data.length}})</label>
+                                                        <label class="pad-top-2 pad-left-10 mar-bottom-0">Predecessors ({{dataGridTaskPredecessorsHelper.gridData.data.length}})</label>
                                                     </ng-template>
                                                     <!-- Columns -->
                                                     <kendo-grid-column *ngFor="let column of taskSuccessorPredecessorColumnsModel.columns"
