--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -266,7 +266,7 @@
             <div class="modal-footer form-group-center">
                 <button (click)="cancelCloseDialog()" type="button" class="btn btn-default component-action-cancel pull-right">
                     <span class="glyphicon glyphicon-ban-circle"></span>
-                    <span>Cancel</span>
+                    <span>Close</span>
                 </button>
                 <button (click)="deleteTask()" type="button" class="btn btn-danger component-action-delete">
                     <span  class="glyphicon glyphicon-trash"></span>
