TM-12251 Fix issue: Tasks listed in the Predecessor and Successor section are in bold tex

--- a/web-app/tds/web-app/css/elements/component/task-detail-component.sass
+++ b/web-app/tds/web-app/css/elements/component/task-detail-component.sass
@@ -32,7 +32,14 @@
           flex-direction: column
         .dates-info-container
           display: flex
+    .modal-footer
+      padding: 15px 18px
+
   .successor-predecessor-table
+    .k-grid-content
+      td
+        label
+          font-weight: normal
     thead
       th.k-header
         a
