TM-12251 Fix issue displaying background task color based on task status

--- a/web-app/tds/web-app/css/base/taskstatus.sass
+++ b/web-app/tds/web-app/css/base/taskstatus.sass
@@ -4,17 +4,17 @@
   font-weight: bold
 
 .task-hold_overtime
-  background-color: $color-task-hold-bg-overtime--red
+  background-color: $color-task-hold-bg-overtime--red !important
   color: $color--black
   font-weight: bold
 
 .task-planned
-  background-color: $color-task-planned-bg--white
+  background-color: $color-task-planned-bg--white !important
   color: $color--grey
   font-weight: bold
 
 .task-pending
-  background-color: $color-task-pending-bg--white
+  background-color: $color-task-pending-bg--white !important
   color: $color--black
   font-weight: bold
 
@@ -29,38 +29,38 @@
   font-weight: bold
 
 .task-completed2
-  background-color: $color-task-completed2-bg--turquoise
+  background-color: $color-task-completed2-bg--turquoise !important
 
 .task-completed5
-  background-color: $color-task-completed5-bg--blue
+  background-color: $color-task-completed5-bg--blue !important
 
 .task-completed
-  background-color: $color-task-completed-bg--blue2
+  background-color: $color-task-completed-bg--blue2 !important
   color: $color--white
   font-weight: bold
 
 .task-done2
-  background-color: $color-task-done2-bg--blue3
+  background-color: $color-task-done2-bg--blue3 !important
 
 .task-done5
-  background-color: $color-task-done5-bg--blue4
+  background-color: $color-task-done5-bg--blue4 !important
 
 .task-done
-  background-color: $color-task-done-bg--darkblue
+  background-color: $color-task-done-bg--darkblue !important
   color: $color--white
   font-weight: bold
 
 .task-na
-  background-color: $color-task-na-bg--lightgray
+  background-color: $color-task-na-bg--lightgray  !important
 
 .task-term
-  background-color: $color-task-term-bg--black
+  background-color: $color-task-term-bg--black  !important
 
 .task-tardy
-  background-color: $color-task-tardy-bg--mustard
+  background-color: $color-task-tardy-bg--mustard  !important
 
 .task-late
-  background-color: $color-task-late-bg--orange
+  background-color: $color-task-late-bg--orange  !important
 
 .task-overdue
-  color: $color-task-overdue-bg--red
+  color: $color-task-overdue-bg--red  !important
