TM-12249 Add css class to style only table edit asset components

--- a/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
+++ b/web-app/tds/web-app/css/legacy/assetExplorer/tds-angular-component.sass
@@ -177,6 +177,17 @@
     .H
       background-color: #fff !important
       background-image: none !important
+  table.asset-edit-view
+    tr
+      .truck-input-group
+        display: flex
+        justify-content: space-between
+        input
+          min-width: unset
+    td
+      padding: 0 6px
+      height: 32px
+
   /* To Support k-grid inside new Angular Asset View, color is already at Kendo Level, do not modify here */
   .dependents-grid,
   .task-comment-grid,
