TM-11796 Fixed layout and columns

--- a/web-app/tds/web-app/css/style.sass
+++ b/web-app/tds/web-app/css/style.sass
@@ -21,6 +21,7 @@
 @import "elements/general/modal"
 @import "elements/general/checkbox"
 @import "elements/general/code-mirror-component"
+@import "elements/general/flexbox"
 // Components (TODO: this should fusion with page/module folder)
 @import "elements/index"
 @import "shared/components/tds-supports-depends"
