--- a/web-app/tds/web-app/css/page/module/assetExplorer/add-person-component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/add-person-component.sass
@@ -1,23 +1,44 @@
 .add-person-component
-  .box-body
-    padding: auto 15px
-  .required-field::after
-    content: "*"
-    color: red
-  .box-body .form-group
-    margin-bottom: 10px
-    input
-      width: 90%
-    kendo-dropdownlist
-      width: 40%
-    span.remove-team
-      cursor: pointer
-  p.error-msg
-    color: $color-message-error--red
-  .mandatory
-    color: red
-    text-align: right
-    margin: 0
-    padding: 0 50px
-  .teams kendo-dropdownlist
-    margin-top: 5px
+  $initial-width: 390px
+  .modal-dialog
+    width: $initial-width
+    .modal-content
+      width: $initial-width
+    .modal-body
+      padding: 15px 20px
+      .box-body
+        padding: unset
+      .required-field::after
+        content: "*"
+        color: red
+      .box-body .form-group
+        margin-bottom: 6px
+        .label-description
+          font-weight: bold
+          padding-right: 0
+        input
+          width: 100%
+        .person-salary, .person-active, .person-company
+          width: 100%
+          height: 23px
+          .k-input
+            margin-top: -2px
+        span.remove-team
+          cursor: pointer
+      p.error-msg
+        color: $color-message-error--red
+      .mandatory
+        color: red
+        text-align: right
+        padding: 0 15px 0 0
+      .teams kendo-dropdownlist
+        margin-top: 6px
+        height: 23px
+        .k-input
+          margin-top: -2px
+      .middle-name, .add-team
+        padding-right: 0
+      .mobile
+        padding-left: 0
+      .active-container
+        padding-left: 0
