TM-12249 Make add person view draggable

--- a/web-app/tds/web-app/css/page/module/assetExplorer/add-person-component.sass
+++ b/web-app/tds/web-app/css/page/module/assetExplorer/add-person-component.sass
@@ -4,6 +4,8 @@
     width: $initial-width
     .modal-content
       width: $initial-width
+    .modal-header
+      cursor: pointer
     .modal-body
       padding: 15px 20px
       .box-body
