--- a/web-app/tds/web-app/app-js/shared/components/add-person/add-person.component.html
+++ b/web-app/tds/web-app/app-js/shared/components/add-person/add-person.component.html
@@ -1,6 +1,7 @@
 <div tds-handle-escape (escPressed)="cancelCloseDialog()" class="modal fade in add-person-component" id="add-person-component" data-backdrop="static" tabindex="0" role="dialog">
     <div class="modal-dialog modal-md" role="document">
-        <div class="modal-content">
+        <div class="modal-content" tds-ui-modal-decorator=""
+             [options]="modalOptions">
             <div class="modal-header">
                 <button (click)="cancelCloseDialog()" type="button" class="close component-action-close" aria-label="Close">
                     <span aria-hidden="true">×</span>
