--- a/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
+++ b/web-app/tds/web-app/app-js/modules/taskManager/components/detail/task-detail.component.html
@@ -39,14 +39,16 @@
                                                         <label><span>Status</span></label>
                                                     </td>
                                                     <td class="valueNW task-{{taskDetailModel.detail?.assetComment?.status |  lowercase}}"><span>{{taskDetailModel.detail?.assetComment?.status}}</span></td>
+                                                    <td class="label url U" nowrap="nowrap">
+                                                        <label><span>Asset class</span></label>
+                                                    </td>
+                                                    <td class="valueNW">
+                                                        <span>{{taskDetailModel.detail.assetClasses[taskDetailModel.detail.assetClass]}}</span>
+                                                    </td>
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Asset</span></label>
                                                     </td>
                                                     <td class="valueNW"><span>{{taskDetailModel.detail?.assetName}}</span></td>
-                                                    <td class="label url U" nowrap="nowrap">
-                                                        <label><span>Instruction Link</span></label>
-                                                    </td>
-                                                    <td class="valueNW"><span><tds-url-viewer *ngIf="taskDetailModel.detail?.instructionLink" [model]="taskDetailModel.detail.instructionLink"></tds-url-viewer></span></td>
                                                 </tr>
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
                                                     <td class="label U" nowrap="nowrap">
@@ -66,7 +68,14 @@
                                                     <td class="label U" nowrap="nowrap">
                                                         <label><span>Person</span></label>
                                                     </td>
-                                                    <td class="valueNW" colspan="4"><span>{{taskDetailModel.detail?.assignedTo}}</span></td>
+                                                    <td class="valueNW"><span>{{taskDetailModel.detail?.assignedTo}}</span></td>
+                                                    <td class="label url U" nowrap="nowrap">
+                                                        <label><span>Instruction Link</span></label>
+                                                    </td>
+                                                    <td class="valueNW">
+                                                        <span><tds-url-viewer *ngIf="taskDetailModel.detail?.instructionLink" [model]="taskDetailModel.detail.instructionLink"></tds-url-viewer></span>
+                                                    </td>
+	                                                <td colspan="2"></td>
                                                 </tr>
                                                 <tr *ngIf="!collapsedTaskDetail" class="prop">
                                                     <td class="label U" nowrap="nowrap">
